--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "evergreen-ui": "^5.1.2",
     "jest-axe": "^4.1.0",
     "node-sass": "^4.0.0",
     "react": "^17.0.1",
@@ -46,6 +47,5 @@
     "@storybook/node-logger": "^6.1.11",
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.11"
-
   }
 }
