--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "babel-loader": "^8.2.2",
     "evergreen-ui": "^5.1.2",
     "jest-axe": "^4.1.0",
     "node-sass": "^4.0.0",
