--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "babel-loader": "^8.2.2",
     "evergreen-ui": "^5.1.2",
     "jest-axe": "^4.1.0",
     "node-sass": "^4.0.0",
@@ -47,6 +46,7 @@
     "@storybook/addon-links": "^6.1.11",
     "@storybook/node-logger": "^6.1.11",
     "@storybook/preset-create-react-app": "^3.1.5",
-    "@storybook/react": "^6.1.11"
+    "@storybook/react": "^6.1.11",
+    "babel-loader": "^8.2.2"
   }
 }
