--- a/package.json
+++ b/package.json
@@ -47,6 +47,6 @@
     "@storybook/node-logger": "^6.1.11",
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.11",
-    "babel-loader": "^8.2.2"
+    "babel-loader": "8.1.0"
   }
 }
